# vetty-inw-task

./: Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
apps/account/: admin.py  forms.py  models.py  tests.py  utils.py
apps/account/api/v1/: serializers.py  urls.py  views.py
apps/account/migrations/: 0001_initial.py
apps/crypto/: apps.py  coingeko_api.py  pagination.py  tests.py
apps/crypto/api/v1/: urls.py  views.py
apps/crypto/helpers/: health_check.py
crypto-market/: asgi.py  settings.py  urls.py  wsgi.py
